# perceptivo

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: pytest.yml
docs/: conf.py  index.md  index.rst  perceptivo.bib  todo.md
docs/_templates/: module.rst
docs/api/: modules.rst  perceptivo.prefs.rst  perceptivo.root.rst  perceptivo.rst  util.rst
docs/api/data/: index.rst  logging.rst  patient.rst  types.rst
docs/api/entrypoints/: clinician.rst  index.rst  patient.rst
docs/api/gui/: index.rst  main.rst  params.rst  styles.rst
docs/api/gui/widgets/: audiogram.rst  components.rst  control_panel.rst  index.rst  patient.rst  pupil.rst  video.rst
docs/api/networking/: index.rst  messages.rst  node.rst  sockets.rst
docs/api/psychophys/: gaussian.rst  index.rst  model.rst  oracle.rst
docs/api/runtimes/: clinician.rst  index.rst  patient.rst
docs/api/sound/: index.rst  server.rst  sounds.rst
docs/api/stim/: index.rst
docs/api/types/: exam.rst  gui.rst  index.rst  networking.rst  patient.rst  psychophys.rst  pupil.rst  sound.rst  units.rst  video.rst
docs/api/video/: cameras.rst  index.rst  processors.rst  pupil.rst
docs/dev/: index.md
docs/hardware/: overview.md  speaker_candidates.md
docs/software/: configuration.md  installation.md  overview.md  pyenv.md
docs/status/: index.md  roadmap.md
examples/: patient.py  test_pupil_extraction.py  test_pupil_ir.py
perceptivo/: __init__.py  clinician.py  patient.py  prefs.py  root.py  setup.py  util.py
perceptivo/data/: __init__.py  logging.py  patient.py  types.py
perceptivo/gui/: main.py  params.py  styles.py
perceptivo/gui/widgets/: __init__.py  audiogram.py  components.py  control_panel.py  patient.py  pupil.py  video.py
perceptivo/networking/: __init__.py  messages.py  node.py  sockets.py
perceptivo/psychophys/: gaussian.py  model.py  oracle.py
perceptivo/runtimes/: clinician.py  patient.py  runtime.py
perceptivo/sound/: __init__.py  calibration.py  server.py  soundcard.py  sounds.py
perceptivo/types/: __init__.py  exam.py  gui.py  networking.py  patient.py  psychophys.py  pupil.py  root.py  sound.py  units.py  video.py
perceptivo/video/: cameras.py  processors.py  pupil.py
tests/: test_gui_basic.py  test_messages.py  test_networking.py  test_perceptivo.py
