[tool.poetry]
name = "perceptivo"
version = "0.0.1"
description = ""
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pip = "^22"
auto-pi-lot = { git = "https://github.com/wehr-lab/autopilot.git", branch = "dev" }
pyzmq = "^22.3.0"
scikit-learn = "^1.0.1"
matplotlib = {version=">=3.4.3", optional=true}
PySide6 = {version = "^6.1.2", optional=true}
pyqtgraph = {version = "^0.12", optional=true}
JACK-Client = {version="^0.5.3", optional=true}
sphinx = {version = "^4.2", optional=true}
furo = {version = "^2022", optional=true}
myst-parser = {version ="^0.16", optional=true}
sphinxcontrib-bibtex = {version="^2.4.1", optional=true}
numpy = ">=1.18,<1.22"
importlib-metadata = {version="^4.10", python="~3.7"}
typing-extensions = {version="^4.0", python="~3.7"}
SoundCard = {version="^0.4", python=">=3.8", optional=true}
opencv-python-headless = [
    {version=">=4.4.0,<4.5.5", python="~3.9" }
]
scipy = ">=1.6"
requests = "^2.27.1"
tqdm = "^4.62.3"
scikit-image = "^0.19.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
patient = 'perceptivo.patient:main'
clinician = 'perceptivo.clinician:main'

[tool.poetry.extras]
docs = ["sphinx", "furo", "myst-parser", "sphinxcontrib-bibtex", "matplotlib", "SoundCard"]
patient = ["JACK-Client", "SoundCard"]
clinician = ["PySide6", "pyqtgraph"]
plotting = ["matplotlib"]

[[tool.poetry.source]]
name = "piwheels.org"
url = "https://www.piwheels.org/simple"
secondary = true

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
