[tool.poetry]
name = "perceptivo"
version = "0.0.1"
description = ""
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pip = "^22"
auto-pi-lot = { git = "https://github.com/wehr-lab/autopilot.git", branch = "dev" }
pyzmq = "^22.3.0"
scikit-learn = "^1.0.1"
matplotlib = {version=">=3.4.3", optional=true}
PySide6 = {version = "^6.1.2", optional=true}
pyqtgraph = {version = "^0.12", optional=true}
sphinx = {version = "^4.2", optional=true}
furo = {version = "^2022", optional=true}
myst-parser = {version ="^0.16", optional=true}
sphinxcontrib-bibtex = {version="^2.4.1", optional=true}
numpy = ">=1.18,<=1.22.2"
importlib-metadata = {version="^4.10", python="~3.7"}
typing-extensions = {version="^4.0", python="~3.7"}
SoundCard = {version="^0.4", python=">=3.8", optional=true}
opencv-python-headless = "^4.5.5.62"
scipy = ">=1.6"
requests = "^2.27.1"
tqdm = "^4.62.3"
scikit-image = "^0.19.1"
pydantic = "^1.9.0"
picamera = {version="^1.13", markers="platform_machine=='armv7l'", optional=true}
msgpack = "^1.0.3"
pytest = {version = "^7.0.1", optional = true}
pytest-qt = {version = "^4.0.2", optional = true}
autodoc_pydantic = {version = "^1.8.0", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
patient = 'perceptivo.runtimes.patient:main'
clinician = 'perceptivo.runtimes.clinician:main'

[tool.poetry.extras]
docs = ["sphinx", "furo", "myst-parser", "sphinxcontrib-bibtex", "matplotlib", "SoundCard", "autodoc_pydantic"]
patient = ["SoundCard", 'picamera']
clinician = ["PySide6", "pyqtgraph"]
plotting = ["matplotlib"]
tests = ["pytest", "pytest-qt", "PySide6", "pyqtgraph"]

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple"
secondary = true

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
